# api-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
migration/: Cargo.toml
migration/src/: lib.rs  m20241210_000001_create_users_table.rs  m20241210_000002_create_posts_table.rs
src/: lib.rs  main.rs
src/config/: app_state.rs  database.rs  logging.rs  mod.rs  openapi.rs
src/controllers/: health_controller.rs  mod.rs  post_controller.rs  user_controller.rs
src/dto/: mod.rs  pagination.rs  post.rs  user.rs
src/entities/: mod.rs  post.rs  user.rs
src/error/: mod.rs
src/fixtures/: factory.rs  mod.rs  user_factory.rs
src/response/: mod.rs
src/services/: mod.rs  post_service.rs  user_service.rs
src/validation/: mod.rs
tests/: health_controller_test.rs  post_controller_test.rs  user_controller_test.rs
tests/common/: mod.rs
