[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ORM (comme Doctrine)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }

# Pour le state partagé et middleware (comme les services Symfony)
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging (comme Monolog en Symfony)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Gestion des dates (comme Carbon en PHP)
chrono = "0.4"

# Async trait (pour les factories)
async-trait = "0.1"

# Migrations (comme doctrine:migrations)
migration = { path = "migration" }
sea-orm-migration = "1.1"

# Validation (comme Symfony Validator)
validator = { version = "0.19", features = ["derive"] }
thiserror = "2"

# OpenAPI / Swagger (comme NelmioApiDocBundle)
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
# Tests HTTP (comme WebTestCase en Symfony)
axum-test = "16"
# Async test runtime
tokio-test = "0.4"
